# city_wiki

./: .gitignore  CLAUDE.md  Done.md  HOW_TO_ADD_CITY.md  LICENSE  Plan.md  README.md  db.sqlite3  manage.py  master-icons.afphoto  prefect.yaml  pyproject.toml  requirements.txt  resize_images.sh  shell.nix
.direnv/: nix-profile-26.05-ln4j1iqnnzs2ynx2  nix-profile-26.05-ln4j1iqnnzs2ynx2.rc
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
cities/: Done.md  enrich_tasks.py  fetch_tasks.py  generation.py  models.py  tasks.py  urls.py  views.py
cities/migrations/: 0001_initial.py  0002_alter_pointofinterest_city_district_and_more.py  0002_city_and_more.py  0003_validation.py  0004_remove_validation_cities_vali_parent__6befe1_idx_and_more.py  0005_add_sub_category.py  0006_add_poi_list.py  0007_pointofinterest_image_url.py  0008_city_image_url_alter_city_country.py  0009_city_about_city_wikivoyage_url.py  0010_city_image_file.py  0011_remove_city_image_url.py  0012_remove_pointofinterest_image_url_and_more.py  0013_pointofinterest_osm_id.py
cities/services/: __init__.py  city_import.py
cities/templates/: base.html
cities/templatetags/: city_tags.py
cities/tests/: __init__.py  test_city_import_service.py
city_wiki/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
data_processing/: populate_db.py  wikipedia_scraper.py  wikivoyage_scraper.py
djangotutorial/: db.sqlite3
llm/: batch.py  description_summary_system_message.txt  single.py
workflow/: city_import.py  prefect.custom.yaml  prefect.yaml  run_import.py
(+27 files in other folders)
