[project]
name = ""
version = "0.0.1"
dependencies = [
    "django>=4.2.0",
    "django-reversion>=5.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "groq>=0.4.2",
    "wikipedia>=1.4.0",
    "perfect>=0.0.1",
    "celery>=5.5.2",
    "mwapi>=0.6.1",
    "wikitextparser>=0.52.0",
    "geopy>=2.4.1",
    "pandas>=2.2.3",
    "shapely>=2.1.1",
    "geopandas>=1.0.1",
    "pillow>=11.2.1",
    "prefect>=3.4.4",
    "redis>=6.2.0",
    "pyrosm>=0.6.2",
    "thefuzz>=0.22.1",
]

[tool.uv]
package = false
